--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "iostream": "cpp",
-        "ostream": "cpp"
-    }
+        "ostream": "cpp",
+        "vector": "cpp",
+        "climits": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
